@@ -1,4 +1,5 @@
 #include <glib.h>
+#include <stdio.h>
 
 /* This test is just to be used with valgrind */
 char *
@@ -26,6 +27,84 @@ test_concat ()
 	return NULL;
 }
 
+#define sfail(k,p) if (s->str [p] != k) return g_strdup_printf ("Failed at %d, expected '%c'", p, k);
+
+char *
+test_gstring ()
+{
+	GString *s = g_string_new_len ("My stuff", 2);
+	char *ret;
+	int i;
+
+	if (strcmp (s->str, "My") != 0)
+		return "Expected only 'My' on the string";
+	g_string_free (s, TRUE);
+
+	s = g_string_new_len ("My\0\0Rest", 6);
+	if (s->str [2] != 0)
+		return "Null was not copied";
+	if (strcmp (s->str+4, "Re") != 0){
+		return "Did not find the 'Re' part";
+	}
+
+	g_string_append (s, "lalalalalalalalalalalalalalalalalalalalalalal");
+	if (s->str [2] != 0)
+		return "Null as not copied";
+	if (strncmp (s->str+4, "Relala", 6) != 0){
+		printf ("got: %s\n", s->str+4);
+		return "Did not copy correctly";
+	}
+
+	g_string_free (s, TRUE);
+	s = g_string_new ("");
+	for (i = 0; i < 1024; i++){
+		g_string_append (s, "x");
+	}
+	if (strlen (s->str) != 1024){
+		printf ("got: %s %d\n", s->str, strlen (s->str));
+		return "Incorrect string size";
+	}
+	g_string_free (s, TRUE);
+
+	s = g_string_new ("");
+	for (i = 0; i < 1024; i++){
+		g_string_append_c (s, 'x');
+	}
+	if (strlen (s->str) != 1024){
+		printf ("got: %s %d\n", s->str, strlen (s->str));
+		return "Incorrect string size";
+	}
+	g_string_free (s, TRUE);
+
+	s = g_string_new ("hola");
+	g_string_sprintfa (s, "%s%d", ", bola", 5);
+	if (strcmp (s->str, "hola, bola5") != 0){
+		printf ("got: %s\n", s->str);
+		return "Got incorrect data";
+	}
+	g_string_free (s, TRUE);
+
+	s = g_string_new ("Hola");
+	g_string_printf (s, "Dingus");
+	
+	/* Test that it does not release it */
+	ret = g_string_free (s, FALSE);
+	g_free (ret);
+
+	s = g_string_new ("H\0y");
+	g_string_append_len (s, "1\02", 3);
+	printf ("got: %s\n", s->str);
+	sfail ('H', 0);
+	sfail (0, 1);
+	sfail ('y', 2);
+	sfail ('1', 3);
+	sfail (0, 4);
+	sfail ('2', 5);
+	g_string_free (s, TRUE);
+
+	return NULL;
+}
+
 char *
 test_split ()
 {
@@ -44,4 +123,3 @@ test_split ()
 	g_strfreev(v);
 	return NULL;
 }
-
